fixed project page text sizing on mobile

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ h1{
 
 @media (max-width: 1000px) {
     .proj-text h4{
-		font-size: 3vh;
+		font-size: 2vh;
 	}
 }
 
